# WhylSon

./: .gitignore  .gitmodules  README.md  dune-project  install.sh  test.sh  whylson.opam  whylson.opam.template  whylson.tgz
lib/: README.md  axiomatic.mlw  dataTypes.mlw  myMap.mlw  util.mlw
lib/tests/Michelson/: factorial.tz  mutisig.tz
lib/tests/WhyML/: factorial.mlw
lib/tests/WhyML/factorial/: why3session.xml
src/: adt_typ.ml  dune  translator.ml  typer.ml  why3_michelson.ml  why3_michelson_trans.ml  whylson.ml  whylson_plugin.ml
temp/: temp.mlw  tz_tmp.mlw
tests/: addNats.tz  dip_test.tz  if_cons_test.tz  if_left_test.tz  if_none_test.tz  if_test.tz
tests/Ligo/: fa12.mlw  fa12.tz
tests/Ligo/fa12/: why3session.xml
tests/addNats/: why3session.xml
tests/dip_test/: why3session.xml
tests/fact_test/: why3session.xml
tests/framework_tests/: addNats.mlw  addNats.tz  add_nats.mlw  dip_test.mlw  dip_test.tz  fact_test.tz  if_cons_test.mlw  if_cons_test.tz  if_left_test.mlw  if_left_test.tz  if_none_test.mlw  if_none_test.tz  if_test.mlw  if_test.tz  iter_test.tz  loop_test.mlw  loop_test.tz  temp.mlw  temp_test.tz  why3session.xml
tests/framework_tests/addNats/: why3session.xml
tests/framework_tests/add_nats/: why3session.xml
tests/framework_tests/dip_test/: why3session.xml
tests/framework_tests/ic/: why3session.xml
tests/framework_tests/if_cons_2/: why3session.xml
tests/framework_tests/if_cons_test/: why3session.xml
tests/framework_tests/if_left_test/: why3session.xml
tests/framework_tests/if_test/: why3session.xml
tests/framework_tests/loop_test/: why3session.xml
tests/if_cons_test/: why3session.xml
tests/if_none_test/: why3session.xml
tests/if_test/: why3session.xml
tests/lib_tests/Michelson/: factorial.tz
tests/lib_tests/Michelson/factorial/: why3session.xml
tests/lib_tests/WhyML/: multisig.mlw
tests/lib_tests/WhyML/multisig/: why3session.xml
