(library
  (public_name whylson)
  (flags :standard -w -9-32-27 -linkall)
  (library_flags -linkall)
  (modules translator whylson_plugin adt_typ typer)
  (libraries why3 michelson))

;; cf https://discuss.ocaml.org/t/dune-problems-using-dynlink-plugins/2874
(rule
  (targets plugin_whylson.cmxs)
  (deps whylson.cmxa)
  (action (run ocamlfind ocamlopt
                  -shared
                  -linkall
                  -linkpkg
                  -package zarith
                  -package michelson
                  %{deps}
                  -o %{targets}
  )))

(install
  (section lib_root)
  (files
   (plugin_whylson.cmxs as whylson/plugins/plugin_whylson.cmxs))
  (package whylson))