  (executable
    (libraries why3 zarith michelson)  
    (link_flags -linkall)
    (name whylson_plugin)
    (modes plugin)
    (embed_in_plugin_libraries
      zarith
      bigarray-compat
      cstruct
      hex
      uutf      
      jsonm
      sexplib0
      ezjsonm
      bigstringaf
      angstrom
      stringext
      uri
      json-data-encoding
      ocplib-endian
      json-data-encoding-bson
      data-encoding
      result
      lwt
      lwt-canceler
      tezos-stdlib
      tezos-error-monad
      tezos-micheline
      michelson))

 (install
   (section lib_root)
   (files
    (whylson_plugin.cmxs as why3/plugins/whylson_plugin.cmxs))
   (package whylson))


